Updates to the api (WIP)
